# kalm

./: .flatpak-manifest.yml  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  QmlFormat.cmake  README.md  org.kde.kalm.appdata.xml  org.kde.kalm.desktop  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml
android/drawable/: splash.xml
android/res/drawable/: splash.xml
autotests/: CMakeLists.txt
po/ar/: kalm.po
po/ast/: kalm.po
po/ca/: kalm.po
po/ca@valencia/: kalm.po
po/cs/: kalm.po
po/de/: kalm.po
po/en_GB/: kalm.po
po/eo/: kalm.po
po/es/: kalm.po
po/eu/: kalm.po
po/fr/: kalm.po
po/ga/: kalm.po
po/gl/: kalm.po
po/he/: kalm.po
po/hi/: kalm.po
po/is/: kalm.po
po/it/: kalm.po
po/ja/: kalm.po
po/ka/: kalm.po
po/ko/: kalm.po
po/lt/: kalm.po
po/nl/: kalm.po
po/pl/: kalm.po
po/pt_BR/: kalm.po
po/ru/: kalm.po
po/sa/: kalm.po
po/sk/: kalm.po
po/sl/: kalm.po
po/sv/: kalm.po
po/tr/: kalm.po
po/ug/: kalm.po
po/uk/: kalm.po
po/zh_CN/: kalm.po
po/zh_TW/: kalm.po
src/: CMakeLists.txt  KalmSettings.kcfg  KalmSettings.kcfgc  Messages.sh  config-kalm.h.cmake  main.cpp  resources.qrc
src/qml/: 478BreathingPage.qml  BoxBreathingPage.qml  BoxBreathingSleepPage.qml  BreathingGradient.qml  BreathingPage.qml  CoordinatedBreathingPage.qml  FadeBehavior.qml  KalmGlobalDrawer.qml  NadiShodhanaPage.qml  ResonantBreathingPage.qml  SettingsPage.qml  YogicBreathingPage.qml  main.qml
